[package]
name = "luao3"
version = "0.1.1"
edition = "2021"
description = "Lua bindings for Rust, oriented around macros. Lossly inspired by pyo3, but based on mlua."
repository = "https://github.com/Techcable/luao3"
readme = "README.md"
# panic in const contexts ;)
rust-version = "1.57"
license = "MIT"

[dependencies]
luao3-macros = { version = "0.1", path = "lib/macros" }

[dependencies.mlua]
version = "0.7"
features = ["macros"]

[features]
luajit = ["mlua/luajit"]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
module = ["mlua/module"]

[workspace]
