[package]
name = "luao3"
version = "0.1.2"
edition = "2021"
description = "Lua bindings for Rust, oriented around macros. Lossly inspired by pyo3, but based on mlua."
repository = "https://github.com/Techcable/luao3"
readme = "README.md"
# panic in const contexts ;)
rust-version = "1.57"
license = "MIT"

[dependencies]
luao3-macros = { version = "0.1", path = "lib/macros" }

[dependencies.mlua]
version = "0.7"
features = ["macros"]

[features]
# Rationale to have this as default is that we want a sensible default configuration.
# Without this, the "default features" would cause mlua to error because you haven't selected
# a specific lua version
#
# We want the default features to work correctly, even if it means selecting an undesirable
# version.
#
# If you are not using Lua 5.4, please disable it by setting default-features = false
# and selecting a different version.
default = ["lua54"]
luajit = ["mlua/luajit"]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
module = ["mlua/module"]
# vendored source for lua (see mlua docs)
vendored = ["mlua/vendored"]

[package.metadata.docs.rs]
# Use vendored lua on docs.rs, because we want it to compile ;)
features = ["vendored"]
