[package]
name = "luao3-macros"
description = "Macros/derive for luao3."
repository = "https://github.com/Techcable/luao3"
readme = "../../README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["extra-traits", "full"] }
darling = "0.13"
quote = "1"
proc-macro-kwargs = "0.1"
indexmap = "1"
# Used for debugging
prettyplease = "0.1"
